some more colol and config changes

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,11 +1,17 @@
 if "test ! -d ~/.tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
 
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin "arcticicestudio/nord-tmux"
-set -g @plugin 'jaclu/tmux-menus'
-set -g @plugin 'rickstaa/tmux-notify'
+set -g @plugin "tmux-plugins/tpm"
+set -g @plugin "dracula/tmux"
+set -g @plugin "jaclu/tmux-menus"
+set -g @plugin "rickstaa/tmux-notify"
 
 set -g mouse on
+
+set -g @dracula-plugins "cpu-usage ram-usage "
+set -g @dracula-show-powerline true
+set -g @dracula-show-left-icon "👻"
+#set -g @dracula-show-location false
+#set -g @dracula-battery-label "♥ "
 
 run '~/.tmux/plugins/tpm/tpm'
