update before maybe breaking stuff

--- a/tmux.conf
+++ b/tmux.conf
@@ -10,8 +10,9 @@ set -g mouse on
 
 set -g @dracula-plugins "cpu-usage ram-usage "
 set -g @dracula-show-powerline true
-set -g @dracula-show-left-icon "👻"
+set -g @dracula-show-left-icon "#H | #S 👻"
 #set -g @dracula-show-location false
 #set -g @dracula-battery-label "♥ "
+bind-key -n C-a send-prefix
 
 run '~/.tmux/plugins/tpm/tpm'
