--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,11 @@
 if "test ! -d ~/.tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
 
+set-option -g status-position top
+set-window-option -g mode-keys vi
+bind P paste-buffer
+bind-key -T copy-mode-vi c send-keys -X copy pipe-and-cancel xclip -i -selection clipboard"
+
 set -g @plugin "tmux-plugins/tpm"
 set -g @plugin "dracula/tmux"
 set -g @plugin "jaclu/tmux-menus"
@@ -10,9 +15,12 @@ set -g mouse on
 
 set -g @dracula-plugins "cpu-usage ram-usage "
 set -g @dracula-show-powerline true
-set -g @dracula-show-left-icon "#H | #S 👻"
-#set -g @dracula-show-location false
-#set -g @dracula-battery-label "♥ "
+# set -g @dracula-show-left-icon "#H | #S 👻"
+# set -g @dracula-show-location false
+set -g @dracula-battery-label "♥ "
 bind-key -n C-a send-prefix
+unbind r
+bind r source-file ~/.tmux.conf \; display-message 'configuration reloaded'
+
 
 run '~/.tmux/plugins/tpm/tpm'
